Removed redundant code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</form>
 			<div class="content-container">
 				<section id="results">
-					<h1 class="word-output"></h1> <a href="#" class="add-word">+</a>
+					<h1 class="word-output"></h1>
 					<h3 class="sub-heading">What's it mean...!?</h3>
 					<div class="definitions">
 						<ul class="list">
@@ -27,20 +27,21 @@
 				</section>
 			</div>
 		
-			<nav class="navigation">
+			<!-- word bank and test functionality will be added at a later date -->
+			<!-- <nav class="navigation">
 				<ul>
 					<li><a href="#" class="search-button">Search</a></li>
 					<li><a href="#" class="word-bank-button">Word Bank</a></li>
 					<li><a href="#" class="test-me-button">Test me!</a></li>
 				</ul>
-			</nav>
+			</nav> -->
 			
 		
-			<section id="word-bank">
+			<!-- <section id="word-bank">
 				<ul class="word-bank-list">
 		
 				</ul>
-			</section>
+			</section> -->
 		</div>
 	</div>
     <script src="app.js"></script>
